--- a/docs/styles.css
+++ b/docs/styles.css
@@ -2,11 +2,10 @@ html, body {
     margin: 0; padding: 0;
     height: 100%; 
     overflow: auto;
-
 }
 
 #lit_quote em {
-    font-weight: 900;
+    font-weight: 700;
     color: rgb(19, 19, 19);
     font-style: normal
 }
@@ -15,13 +14,13 @@ html, body {
     width: 80vw;
     margin: auto; 
     color: dimgrey;
-    font-family: 'Merriweather', Times, serif;
+    font-family: "Playfair Display", serif;
 }
 
 cite {
     float: right;
     padding-left: 10vw;
-    font-size: 2.3vw;
+    font-size: 1.5vw;
 }
 
 cite #book{
@@ -36,7 +35,6 @@ cite #book{
     color: dimgray;
     padding-left: 40px;
     padding-right: 0px;
-
 }
 
 #buttom a, a:visited {
