--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,20 +1,20 @@
-html, body { 
+html, body {
     margin: 0; padding: 0;
-    height: 100%; 
+    height: 100%;
     overflow: auto;
+    font-family: "Playfair Display", serif;
 }
 
 #lit_quote em {
     font-weight: 700;
     color: rgb(19, 19, 19);
-    font-style: normal
+    font-style: normal;
 }
 
 #main_text {
     width: 80vw;
-    margin: auto; 
+    margin: auto;
     color: dimgrey;
-    font-family: "Playfair Display", serif;
 }
 
 cite {
@@ -28,9 +28,9 @@ cite #book{
 }
 
 #buttom {
-    height: 10px; 
+    height: 10px;
     width: 90%;
-    position: fixed; 
+    position: fixed;
     bottom:2%;
     color: dimgray;
     padding-left: 40px;
@@ -38,7 +38,7 @@ cite #book{
 }
 
 #buttom a, a:visited {
-    color: rgb(66, 66, 66)
+    color: rgb(66, 66, 66);
 }
 
 #github {
